--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^6.1.0
+  flutter_bluetooth_serial: ^0.4.0
+  crypto: ^3.0.3
+  provider: ^6.1.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
