--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   crypto: ^3.0.3
   provider: ^6.1.1
   permission_handler: ^11.3.1
+  geolocator: ^10.1.1
+  path_provider: ^2.1.2
 
 dev_dependencies:
   flutter_test:
